feat: list secrets feature and tests
