# gen/http/openapi3.yaml
@@ -119,7 +119,7 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/AddShareResponseBody'
                             example:
-                                index: 6106076951395180224
+                              index: 6938986088863093119
                                 unlocked: false
                 "400":
                     description: 'wrong_shares: The key recombined from the shares is not the correct key'
@@ -160,10 +160,10 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/GetKeyStatusResponseBody'
                             example:
-                                current_shares: 3097709587391736332
+                              current_shares: 2038305493491334832
                                 is_locked: true
-                                min_shares: 2038305493491334832
-                                total_shares: 8155372107292265134
+                              min_shares: 8155372107292265134
+                              total_shares: 382474295782307311
                 "404":
                     description: 'no_key_set: No master key has been set'
                     content:
@@ -177,6 +177,63 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Error'
     /secrets:
+      get:
+        tags:
+          - secrets
+        summary: list secrets secrets
+        description: Retrieve all secrets you have access to
+        operationId: secrets#list secrets
+        responses:
+          "200":
+            description: OK response.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ListSecretsResponseBody'
+                example:
+                  secrets:
+                    - created_at: "2025-06-30T12:00:00Z"
+                      owner:
+                        created_at: "2025-06-30T12:00:00Z"
+                        id: 1
+                        updated_at: "2025-06-30T15:00:00Z"
+                        username: alice
+                      path: customers/google/api_key
+                      updated_at: "2025-06-30T15:00:00Z"
+                    - created_at: "2025-06-30T12:00:00Z"
+                      owner:
+                        created_at: "2025-06-30T12:00:00Z"
+                        id: 1
+                        updated_at: "2025-06-30T15:00:00Z"
+                        username: alice
+                      path: customers/google/api_key
+                      updated_at: "2025-06-30T15:00:00Z"
+                    - created_at: "2025-06-30T12:00:00Z"
+                      owner:
+                        created_at: "2025-06-30T12:00:00Z"
+                        id: 1
+                        updated_at: "2025-06-30T15:00:00Z"
+                        username: alice
+                      path: customers/google/api_key
+                      updated_at: "2025-06-30T15:00:00Z"
+          "401":
+            description: 'unauthorized: Unauthorized access'
+            content:
+              application/vnd.goa.error:
+                schema:
+                  $ref: '#/components/schemas/Error'
+          "403":
+            description: 'forbidden: Forbidden access'
+            content:
+              application/vnd.goa.error:
+                schema:
+                  $ref: '#/components/schemas/Error'
+          "500":
+            description: 'internal_error: Internal server error'
+            content:
+              application/vnd.goa.error:
+                schema:
+                  $ref: '#/components/schemas/Error'
         post:
             tags:
                 - secrets
@@ -391,19 +448,7 @@ paths:
                                       id: 1
                                       updated_at: "2025-06-30T15:00:00Z"
                                       username: alice
-                                    - created_at: "2025-06-30T12:00:00Z"
-                                      id: 1
-                                      updated_at: "2025-06-30T15:00:00Z"
-                                      username: alice
                             example:
-                                - created_at: "2025-06-30T12:00:00Z"
-                                  id: 1
-                                  updated_at: "2025-06-30T15:00:00Z"
-                                  username: alice
-                                - created_at: "2025-06-30T12:00:00Z"
-                                  id: 1
-                                  updated_at: "2025-06-30T15:00:00Z"
-                                  username: alice
                                 - created_at: "2025-06-30T12:00:00Z"
                                   id: 1
                                   updated_at: "2025-06-30T15:00:00Z"
@@ -580,15 +625,15 @@ components:
                 index:
                     type: integer
                     description: The index of the share added
-                    example: 8525282000380440573
+                    example: 1761516349162541318
                     format: int64
                 unlocked:
                     type: boolean
                     description: Whether the master key has been unlocked
                     example: true
             example:
-                index: 772060011925413293
-                unlocked: false
+              index: 9060306552527090875
+              unlocked: true
             required:
                 - index
                 - unlocked
@@ -665,7 +710,7 @@ components:
                     type: array
                     items:
                         type: string
-                        example: Minus et maxime impedit.
+                        example: Assumenda sint asperiores repudiandae deleniti.
                     description: The generated key shares
                     example:
                         - EXAMPLEA5ZKwDn8Zotr3B+d+F+UzrcJ1Yhl2rU0
@@ -684,7 +729,7 @@ components:
                     type: array
                     items:
                         type: integer
-                        example: 1300446162783111436
+                        example: 1140763715867927262
                         format: int64
                     description: Role IDs authorized to access the secret
                     example:
@@ -694,7 +739,7 @@ components:
                     type: array
                     items:
                         type: integer
-                        example: 6772079528695378523
+                        example: 64506126104031387
                         format: int64
                     description: Users IDs authorized to access the secret
                     example:
@@ -793,11 +838,11 @@ components:
                 temporary:
                     type: boolean
                     description: Is the error temporary?
-                    example: true
+                    example: false
                 timeout:
                     type: boolean
                     description: Is the error a timeout?
-                    example: true
+                    example: false
             description: Invalid parameters provided
             example:
                 fault: true
@@ -819,27 +864,27 @@ components:
                 current_shares:
                     type: integer
                     description: Number of shares currently held
-                    example: 6468099021671011956
+                    example: 91005950870362265
                     format: int64
                 is_locked:
                     type: boolean
                     description: Whether the key is currently locked
-                    example: false
+                    example: true
                 min_shares:
                     type: integer
                     description: Minimum number of shares required
-                    example: 3152687610232307163
+                    example: 299516104386074996
                     format: int64
                 total_shares:
                     type: integer
                     description: Total number of shares
-                    example: 3943521745837448096
+                    example: 3336649369025367754
                     format: int64
             example:
-                current_shares: 5475002864767066459
+              current_shares: 235252295903838320
                 is_locked: true
-                min_shares: 6044902324840027372
-                total_shares: 5528496372941052397
+              min_shares: 1715167286671607405
+              total_shares: 4018948085197412564
             required:
                 - is_locked
                 - current_shares
@@ -859,6 +904,65 @@ components:
             example:
                 path: customers/google/api_key
                 value: SECRET_API_KEY
+        ListSecretsResponseBody:
+          type: object
+          properties:
+            secrets:
+              type: array
+              items:
+                $ref: '#/components/schemas/SecretInfoSummary'
+              description: List of secrets you have access to
+              example:
+                - created_at: "2025-06-30T12:00:00Z"
+                  owner:
+                    created_at: "2025-06-30T12:00:00Z"
+                    id: 1
+                    updated_at: "2025-06-30T15:00:00Z"
+                    username: alice
+                  path: customers/google/api_key
+                  updated_at: "2025-06-30T15:00:00Z"
+                - created_at: "2025-06-30T12:00:00Z"
+                  owner:
+                    created_at: "2025-06-30T12:00:00Z"
+                    id: 1
+                    updated_at: "2025-06-30T15:00:00Z"
+                    username: alice
+                  path: customers/google/api_key
+                  updated_at: "2025-06-30T15:00:00Z"
+                - created_at: "2025-06-30T12:00:00Z"
+                  owner:
+                    created_at: "2025-06-30T12:00:00Z"
+                    id: 1
+                    updated_at: "2025-06-30T15:00:00Z"
+                    username: alice
+                  path: customers/google/api_key
+                  updated_at: "2025-06-30T15:00:00Z"
+                - created_at: "2025-06-30T12:00:00Z"
+                  owner:
+                    created_at: "2025-06-30T12:00:00Z"
+                    id: 1
+                    updated_at: "2025-06-30T15:00:00Z"
+                    username: alice
+                  path: customers/google/api_key
+                  updated_at: "2025-06-30T15:00:00Z"
+          example:
+            secrets:
+              - created_at: "2025-06-30T12:00:00Z"
+                owner:
+                  created_at: "2025-06-30T12:00:00Z"
+                  id: 1
+                  updated_at: "2025-06-30T15:00:00Z"
+                  username: alice
+                path: customers/google/api_key
+                updated_at: "2025-06-30T15:00:00Z"
+              - created_at: "2025-06-30T12:00:00Z"
+                owner:
+                  created_at: "2025-06-30T12:00:00Z"
+                  id: 1
+                  updated_at: "2025-06-30T15:00:00Z"
+                  username: alice
+                path: customers/google/api_key
+                updated_at: "2025-06-30T15:00:00Z"
         RoleType:
             type: object
             properties:
@@ -890,14 +994,20 @@ components:
                           name: admin
                         - id: 1
                           name: admin
-                        - id: 1
-                          name: admin
                 authorized_users:
                   type: array
                   items:
                     $ref: '#/components/schemas/User'
                   description: Members authorized to access the secret
                   example:
+                    - created_at: "2025-06-30T12:00:00Z"
+                      id: 1
+                      updated_at: "2025-06-30T15:00:00Z"
+                      username: alice
+                    - created_at: "2025-06-30T12:00:00Z"
+                      id: 1
+                      updated_at: "2025-06-30T15:00:00Z"
+                      username: alice
                     - created_at: "2025-06-30T12:00:00Z"
                       id: 1
                       updated_at: "2025-06-30T15:00:00Z"
@@ -928,8 +1038,6 @@ components:
                       name: admin
                     - id: 1
                       name: admin
-                    - id: 1
-                      name: admin
                 authorized_users:
                   - created_at: "2025-06-30T12:00:00Z"
                     id: 1
@@ -939,10 +1047,39 @@ components:
                     id: 1
                     updated_at: "2025-06-30T15:00:00Z"
                     username: alice
-                  - created_at: "2025-06-30T12:00:00Z"
+                created_at: "2025-06-30T12:00:00Z"
+                owner:
+                  created_at: "2025-06-30T12:00:00Z"
                     id: 1
                     updated_at: "2025-06-30T15:00:00Z"
                     username: alice
+                path: customers/google/api_key
+                updated_at: "2025-06-30T15:00:00Z"
+            required:
+              - path
+              - owner
+              - authorized_users
+              - authorized_roles
+              - created_at
+              - updated_at
+        SecretInfoSummary:
+          type: object
+          properties:
+            created_at:
+              type: string
+              description: Creation timestamp of the secret
+              example: "2025-06-30T12:00:00Z"
+            owner:
+              $ref: '#/components/schemas/User'
+            path:
+              type: string
+              description: The original path of the secret
+              example: customers/google/api_key
+            updated_at:
+              type: string
+              description: Last update timestamp of the secret
+              example: "2025-06-30T15:00:00Z"
+          example:
                 created_at: "2025-06-30T12:00:00Z"
                 owner:
                     created_at: "2025-06-30T12:00:00Z"
@@ -954,8 +1091,6 @@ components:
             required:
                 - path
                 - owner
-                - authorized_users
-                - authorized_roles
                 - created_at
                 - updated_at
         User:
